[FIX] set overflow as scroll for long path

--- a/src/templates/template.css
+++ b/src/templates/template.css
@@ -163,6 +163,7 @@ body {
     font-weight: bold;
     text-align: center;
     line-height: 22px;
+    overflow: scroll;
 }
 
 .InformationR {
@@ -176,6 +177,7 @@ body {
     font-weight: bold;
     text-align: center;
     line-height: 22px;
+    overflow: scroll;
 }
 
 .SectionPlots {
